# Trading-bot

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/core/: config.py
app/api/db/: dynamodb.py
app/api/services/: data_service.py  dhan_service.py  user_service.py
app/api/strategies/: breakout_strategy.py
app/api/v1/: api_v1.py
app/api/v1/endpoints/: auth.py  trading.py
app/routes/: trading.py
app/services/: auth_manager.py  fyers_client.py  position_manager.py  strategy_manager.py  test_logger.py  trading_bot.py
app/tests/: test_historical_data.py
app/utils/: logger.py
tests/: test_fetch_historical_data.py  test_login.py
