[project]
name = "trading-bot-fyers"
version = "0.1.0"
description = ""
authors = [{ name = "Aayush Mishra", email = "aayushmishra4@gmail.com" }]
readme = "README.md"
dependencies = []

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.10.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pandas = "^2.0.0"
numpy = "^2.0.0"
fyers-apiv3 = "^3.0.0"
pyotp = "^2.6.0"
dotenv = "^0.9.9"
pydantic-settings = "^2.0.0" 
pytest = "^8.0.0"
APScheduler =  "^3.0.0 "


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
